--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timer",
   "version": "1.0.0",
-  "description": "",
+  "description": "A generic countdown timer that counts down to the end of the minute from which it is started.",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
